fix appMenu spacing for 3.34

--- a/unite@hardpixel.eu/stylesheet.css
+++ b/unite@hardpixel.eu/stylesheet.css
@@ -43,6 +43,6 @@
   border: 0;
 }
 
-#panel #appMenu {
+#panel.appmenu-spacing #appMenu {
   margin: 0 8px;
 }
